refactor: rename gateway-development service to gateway in docker-compose

--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -1,8 +1,8 @@
 version: '3.8'
 
 services:
-  gateway-development:
-    container_name: gateway-development
+  gateway:
+    container_name: gateway
     restart: unless-stopped
     env_file: .env
     build:
